# feed-service/docs/swagger.json
@@ -1,11 +1,18 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "title": "Social Feed API",
+        "contact": {},
+        "version": "1.0"
     },
     "paths": {
-        "/comment": {
+        "/comment/create": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Authenticated user creates a comment on a feed",
                 "consumes": [
                     "application/json"
@@ -91,8 +98,39 @@
                 }
             }
         },
-        "/feed": {
+        "/feed/": {
+            "get": {
+                "description": "Retrieve all feeds without pagination",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Feeds"
+                ],
+                "summary": "Get all feeds",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.FeedResponse"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/feed/create": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Authenticated user creates a new feed",
                 "consumes": [
                     "application/json"
@@ -128,31 +166,11 @@
                     "401": {
                         "description": "Unauthorized"
                     },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/feed/all": {
-            "get": {
-                "description": "Retrieve all feeds without pagination",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Feeds"
-                ],
-                "summary": "Get all feeds",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.FeedResponse"
-                            }
-                        }
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -229,6 +247,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update feed content by ID",
                 "consumes": [
                     "application/json"
@@ -265,12 +288,23 @@
                     "400": {
                         "description": "Bad Request"
                     },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
                     "500": {
                         "description": "Internal Server Error"
                     }
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a feed by ID",
                 "produces": [
                     "application/json"
@@ -294,6 +328,12 @@
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -393,6 +433,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Enter Bearer followed by a space and the access token from login.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
